# text_align

./: .pre-commit-config.yaml  main.py  pyproject.toml  readme.md  tests.py
.github/workflows/: pylint.yml  pytest.yml
